tests/fixtures/invalid/pow_bytes_float_int.py
# Cannot call pow() with Bytes, Float, Int
x = pow(b"hello", 1.0, 1)
